<resources>
    <string name="app_name">SN34KER</string>
    <string name="txtLogo">SN34KER</string>
    <string name="txtLoginLogo">Login</string>
    <string name="edEmailInput">Email</string>
    <string name="edPassInput">Password</string>
    <string name="btnLogin">Login</string>
    <string name="txtRegister">New Here? Create Account here!</string>
    <string name="edRePass">Confirm Password</string>
    <string name="txtRegiLogo">Register</string>
    <string name="btnRegister">Register</string>
    <string name="txtLoginInfo">Already have an Account? Sign in Here!</string>
    <string name="txtAddProduct">Add New Product</string>
    <string name="etProductName">Product Name</string>
    <string name="etProductBrand">Product Brand</string>
    <string name="etProductPrice">Product Price</string>
    <string name="etProductSize" />
    <string name="etProductUsSize">Product US Size</string>
    <string name="btnSaveProduct">Save</string>
    <string name="devsTxtView">Our Developers</string>
    <string name="btnSelectProduct">Select Picture</string>
    <string name="close">X</string>
    <string name="emailTxtView">sn34ker@gmail.com</string>
    <string name="deteleButton">DELETE</string>

    <string name="txtUserTitle">Update User</string>
    <string name="txtAddress">Personal Address</string>

    <string name="orderTxtView">Your Order</string>
    <string name="orderConfirm">Your Order</string>
    <string name="infoTxtView">Personal Information</string>
    <string name="nameEditTxt">First name and Last name</string>
    <string name="cusAdd">Address</string>
    <string name="cusPOS">Postal Code</string>
    <string name="cusCard">Credit card number</string>
    <string name="cusPin">PIN</string>
    <string name="cusExpDate">Card Exp Date (MMDDYYYY)</string>
    <string name="confirmButton">Place Order</string>
    <string name="txtViewTitle">Confirmation</string>
    <string name="txtViewBill">Billing Address</string>
    <string name="btnShop">Continue Shopping</string>

    <string-array name="sneakerType">
        <item>Athletic Kick</item>
        <item>PlimSoll</item>
        <item>High-Top</item>
        <item>Authentic</item>
        <item>Slip-On</item>
        <item>Leather</item>
        <item>Canvas</item>
    </string-array>
</resources>
